@@ -1,3 +1,5 @@
+* Use custom clause for Tax Code sum
+* Add check to modify Tax Lines
 * Check receivable/payable to erase party
 * Open general ledger accounts from Income Statement relate
 * Add warning when creating a second chart of account
